Fixed function test

--- a/NB.ipynb
+++ b/NB.ipynb
@@ -178,18 +178,9 @@
         "  def __init__(self):\n",
         "    spacy_stopwords_list = list(fr_stop) + list(en_stop)\n",
         "    nltk_stopwords_list = stopwords.words('english') + stopwords.words('french')\n",
-        "    # # words from the english dictionary\n",
-        "    # words = set(nltk.corpus.words.words())\n",
-        "    # # words from the french dictionary\n",
-        "    # mots = set(line.strip() for line in open('/kaggle/working/NLP_Preprocessing/dictionnaire.txt'))\n",
-        "\n",
-        "    # lemmatizer = FrenchLefffLemmatizer()\n",
         "    # self.vectorizer = CountVectorizer(binary = True, max_features = 3000, stop_words = list(set().union(spacy_stopwords_list, nltk_stopwords_list)), tokenizer=LemmaTokenizer())\n",
         "    self.vectorizer = CountVectorizer(binary = True, max_features = 3000, stop_words = list(set().union(spacy_stopwords_list, nltk_stopwords_list)))\n",
         "    self.no_pred = []\n",
-        "\n",
-        "  def lemmatization(self, corpus):\n",
-        "    words \n",
         "\n",
         "  # currently train_corpus expects a np array containing a list of strings, not array of words, nxm\n",
         "  # test_label is an nx1 array\n",
@@ -278,7 +269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 54,
       "metadata": {},
       "outputs": [
         {
@@ -339,7 +330,7 @@
         "# Tokenize and lemmatize each sentence in the mixed set\n",
         "\n",
         "    # print(lemmatizer(sentence))\n",
-        "print(lemmatizer(new_sentence_list))"
+        "print(lemmatizer(sentences))"
       ]
     },
     {
