--- a/NB_Aman.ipynb
+++ b/NB_Aman.ipynb
@@ -161,62 +161,21 @@
     {
       "cell_type": "code",
       "source": [
-        "lemmatized_training_data[0]"
+        "path = '/content/drive/MyDrive/Olympus in the Sky/McGill/2024 - Winter/ECSE 551/Data/'\n",
+        "df_swapped = pd.read_csv(path + 'train.csv', encoding = \"ISO-8859-1\")\n",
+        "df_swapped = df_swapped.sample(frac=1, random_state=1).reset_index(drop = True)\n",
+        "df_swapped = df_swapped[~df_swapped['body'].str.contains('\\?'*10)]\n",
+        "\n",
+        "training_data_swapped   = df_swapped['body'].apply(lambda x: x.lower().replace('_', ' ').replace('\\x82', 'e').replace('\\x85', 'a').replace('\\x87', 'c').replace('\\x8a', 'e').replace('\\x88', 'e').replace('\\x93', 'a').replace('\\x80', 'l').replace('\\x96', 'o')).to_numpy()\n",
+        "training_labels = df_swapped['subreddit'].to_numpy()\n",
+        "\n",
+        "lemmatized_training_data_swapped = pd.read_csv(path + 'lemmatized_swapped.csv')['body'].to_numpy()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        },
-        "id": "a103RN0Dp-zo",
-        "outputId": "437979b4-d145-4a47-bdc6-b558ac6bdccd"
+        "id": "6gdiw3sAeZeY"
       },
-      "execution_count": 55,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'operational so set delay point just donor about do be and time will year can their churn coal whole up they keep herring the switch another by nuclear have be red decade to it renewables something'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 55
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "training_data[0]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        },
-        "id": "QoAOK01VqAk2",
-        "outputId": "90646694-f26f-4513-cd1f-540c53c6b18b"
-      },
-      "execution_count": 56,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'just another red herring. they had 10 years to do something about it. the whole point is to delay switch to renewables so their donors can keep churning coal. by the time nuclear is set up and operational it will be decades.ÿ'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 56
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -244,10 +203,10 @@
         "\n",
         "def lemmatize(arr_of_words):\n",
         "  lang = detect(' '.join(arr_of_words))\n",
-        "  if lang == 'en':\n",
-        "      lemmatizer = WordNetLemmatizer()\n",
-        "  else:\n",
+        "  if lang == 'fr':\n",
         "      lemmatizer = FrenchLefffLemmatizer()\n",
+        "  else:\n",
+        "      lemmatizer = WordNetLemmatizer()\n",
         "\n",
         "  return [lemmatizer.lemmatize(word, pos = get_wordnet_pos(word)) for word in arr_of_words]\n",
         "\n",
