SVM hyperparameter search, poly, linear, sigmoid

--- a/NB.ipynb
+++ b/NB.ipynb
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -68,7 +68,7 @@
           "output_type": "stream",
           "text": [
             "Collecting git+https://github.com/ClaudeCoulombe/FrenchLefffLemmatizer.git\n",
-            "  Cloning https://github.com/ClaudeCoulombe/FrenchLefffLemmatizer.git to c:\\users\\admin\\appdata\\local\\temp\\pip-req-build-664khl5z\n",
+            "  Cloning https://github.com/ClaudeCoulombe/FrenchLefffLemmatizer.git to c:\\users\\admin\\appdata\\local\\temp\\pip-req-build-hxdzh6o8\n",
             "  Resolved https://github.com/ClaudeCoulombe/FrenchLefffLemmatizer.git to commit bc0ebd0135a6cc78f48ddf184069b4c0b9c017d8\n",
             "  Installing build dependencies: started\n",
             "  Installing build dependencies: finished with status 'done'\n",
@@ -84,7 +84,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "  Running command git clone --filter=blob:none --quiet https://github.com/ClaudeCoulombe/FrenchLefffLemmatizer.git 'C:\\Users\\Admin\\AppData\\Local\\Temp\\pip-req-build-664khl5z'\n"
+            "  Running command git clone --filter=blob:none --quiet https://github.com/ClaudeCoulombe/FrenchLefffLemmatizer.git 'C:\\Users\\Admin\\AppData\\Local\\Temp\\pip-req-build-hxdzh6o8'\n"
           ]
         },
         {
@@ -130,6 +130,8 @@
         "from langdetect import detect\n",
         "!pip install tqdm\n",
         "from tqdm import tqdm\n",
+        "# from english_dictionary.scripts.read_pickle import get_dict\n",
+        "from english_words import get_english_words_set\n",
         "\n",
         "seed = 10\n",
         "random.seed(seed)\n",
@@ -174,7 +176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 31,
       "metadata": {
         "id": "06PcDk3Dz-Iz"
       },
@@ -192,16 +194,22 @@
         "def remove_stop_words(arr_of_words, stop_words):\n",
         "  return [word for word in arr_of_words if word not in stop_words]\n",
         "\n",
+        "\n",
+        "def remove_invalid_words(text, valid_words):\n",
+        "    return [word for word in text if word in valid_words]\n",
+        "\n",
         "def lemmatize(arr_of_words):\n",
         "  lang = detect(' '.join(arr_of_words))\n",
-        "  if lang == 'en':\n",
-        "      lemmatizer = WordNetLemmatizer()\n",
-        "  else:\n",
+        "  if lang == 'fr':\n",
+        "      arr_of_words.append('french')\n",
         "      lemmatizer = FrenchLefffLemmatizer()\n",
+        "  else:\n",
+        "      arr_of_words.append('english')\n",
+        "      lemmatizer = WordNetLemmatizer()\n",
         "\n",
         "  return [lemmatizer.lemmatize(word, pos = get_wordnet_pos(word)) for word in arr_of_words]\n",
         "\n",
-        "def preprocess(sentences, regex_pattern = r\"(?u)\\b[a-z][a-z]+\\b\", stop_words = None, is_lemmatize = False):\n",
+        "def preprocess(sentences, regex_pattern = r\"(?u)\\b[a-z][a-z]+\\b\", stop_words = None, is_lemmatize = False, validate_words = None):\n",
         "  new_sentence_list = []\n",
         "  pattern = regex_pattern\n",
         "\n",
@@ -213,6 +221,9 @@
         "\n",
         "      if is_lemmatize:\n",
         "        words = lemmatize(words)\n",
+        "\n",
+        "      # if validate_words: \n",
+        "      #    words = remove_invalid_words(words, validate_words)\n",
         "\n",
         "      new_sentence_list.append(' '.join(words))\n",
         "\n",
@@ -228,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -256,7 +267,7 @@
         "        self.pattern = token_pattern\n",
         "        self.ngram_range = ngram_range\n",
         "        self.vectorizer = TfidfVectorizer(binary = True, max_features = max_features, token_pattern = self.pattern, min_df = min_df, max_df = max_df, ngram_range = ngram_range)\n",
-        "        self.svm_class = svm.SVC(kernel='linear', random_state=seed, degree=2)\n",
+        "        self.svm_class = svm.SVC(kernel='linear', random_state=seed, degree=3)\n",
         "\n",
         "    def train(self, x_data_train, x_data_labels):\n",
         "        assert len(x_data_train)  == len(x_data_labels)\n",
@@ -402,42 +413,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['appartement tre rer lou blanc javel fen aide bain vmc mur grille salle coup passe veille foi ponge peinture galement gratter'\n",
-            " 'wait minor bad clawson take answer question quebec ass patrol lot work course understand friend appropriate asign ambulance differently vehicle differ get vast specific work call situation know likely air officer call send call police people straight choke priority nearby profession depend urgent question overwork information ot care built day system come talk obligate law share base ask protocol consult roam caller ex rarely say code protocol care internationally good location majority think aid hold generate city xxxx stuff caller important go experience wait slow single sends dispatch hear dealt finish protect talk process select force ambulance'\n",
-            " 'quiet crave area park escape noise activity find bustle want street hive excitement overwhelm nyc london city'\n",
-            " ...\n",
-            " 'vraiment tre capable agissent route ge pensent rite perdre trop privil accident honn lons tement good connais monde soul beaucoup impossible conduire'\n",
-            " 'care steal soon lose access enters account illegally lol institution control security play money rule wrong costly judge hope accidentally lesson person fam weak'\n",
-            " 'early day recently train trip work fun take hour spent book well learn home montreal go quebec']\n",
-            "['Melbourne' 'Paris' 'Paris' 'Montreal' 'Melbourne' 'Melbourne' 'London'\n",
-            " 'London' 'Melbourne' 'Melbourne' 'Melbourne' 'Melbourne' 'Montreal'\n",
-            " 'Melbourne' 'Paris' 'Montreal' 'London' 'London' 'London' 'Montreal'\n",
-            " 'Montreal' 'Paris' 'Melbourne' 'London' 'Melbourne' 'Montreal' 'London'\n",
-            " 'Montreal' 'Melbourne' 'Montreal' 'Paris' 'Montreal' 'Melbourne' 'London'\n",
-            " 'Montreal' 'Paris' 'Melbourne' 'Paris' 'Paris' 'Melbourne' 'Montreal'\n",
-            " 'Paris' 'Melbourne' 'Melbourne' 'Montreal' 'Montreal' 'Melbourne'\n",
-            " 'London' 'Montreal' 'Montreal' 'London' 'Paris' 'Melbourne' 'Melbourne'\n",
-            " 'Melbourne' 'Paris' 'London' 'London' 'Melbourne' 'Melbourne' 'Melbourne'\n",
-            " 'Montreal' 'Paris' 'Montreal' 'Melbourne' 'Paris' 'Montreal' 'London'\n",
-            " 'London' 'Melbourne' 'London' 'Paris' 'Paris' 'Melbourne' 'Montreal'\n",
-            " 'Montreal' 'London' 'London' 'Melbourne' 'Paris' 'Melbourne' 'Paris'\n",
-            " 'Melbourne' 'Montreal' 'Paris' 'Melbourne' 'Melbourne' 'Melbourne'\n",
-            " 'London' 'Paris' 'Melbourne' 'London' 'Montreal' 'Paris' 'Montreal'\n",
-            " 'Paris' 'Montreal' 'Montreal' 'Paris' 'London' 'Montreal' 'Paris'\n",
-            " 'Melbourne' 'Montreal' 'Montreal' 'Montreal' 'Melbourne' 'London'\n",
-            " 'Melbourne' 'Paris' 'Montreal' 'Montreal' 'Paris' 'Melbourne' 'Montreal'\n",
-            " 'Melbourne' 'Melbourne' 'London' 'Melbourne' 'London' 'Melbourne'\n",
-            " 'London' 'Montreal' 'London' 'Montreal' 'Montreal' 'London' 'Paris'\n",
-            " 'Montreal' 'London' 'Paris' 'Melbourne' 'Paris' 'Melbourne' 'London'\n",
-            " 'Montreal' 'Melbourne' 'Paris' 'Melbourne']\n",
-            "Accuracy: 0.7122302158273381\n"
+            "Accuracy: 0.6402877697841727\n"
           ]
         }
       ],
@@ -450,24 +433,48 @@
         "other_stop_words = ['http', 'https', 'www']\n",
         "stop_words = list(set().union(spacy_stopwords_list, nltk_stopwords_list, other_stop_words))\n",
         "\n",
+        "# mots = set(line.strip() for line in open(path + 'dictionnaire.txt'))\n",
+        "french_dict = open(path + 'dictionnaire.txt', \"r\", encoding = \"UTF-8\")\n",
+        "\n",
+        "mots = french_dict.read()\n",
+        "\n",
+        "french_mots = mots.replace('\\n', ' ').split(\".\")\n",
+        "\n",
+        "english_words = get_english_words_set(['web2'], lower=True)\n",
+        "\n",
+        "valid_words = list(set().union(english_words, french_mots))\n",
+        "\n",
+        "# df = pd.DataFrame(english_words)\n",
+        "\n",
+        "# df.to_csv('English dictionnary.csv')\n",
+        "\n",
         "model = SVM()\n",
+        "\n",
+        "# X_train = [\n",
+        "#     \"On est bien d?accord que la question pos‚e ne contenait pas le mot SUV, mais bien les diff‚rents adjectifs, lourds,  encombrant, polluants. Sans ®ÿetÿ¯. Les voitures/camionettes (?), encombrantes ou  polluantes des pauvres (ou pas) seront bien tax‚es comme les 4x4?\",\n",
+        "#     \"You can thank the state governments soft approach on drugs and the injecting rooms for the proliferation of junkies all over the city. To save a few lives of junkies that add zero to society, they've destroyed the city for the rest of us. Let's not pretend that heroin users and ice users are mutually exclusive groups.\",\n",
+        "#     \"I?m not comparing them because I?m not clued up enough on either situation but I would love to understand how we are all so angry about what?s going on in Gaza but we all basically ignored the genocide in sudan? Is it because Sudan was a civil war and Gaza is attacked by a different state?\",\n",
+        "#     \"My group is mid to late 30s. We match our agendas and commit. We're pretty open about how we feel (tiredness, money, other commitments) but mainly we make an effort to show up because we enjoy hanging around each other. As an introvert i found friends who don't drain my energy so that also helps.\",\n",
+        "#     \"I was ready to be disappointed tbh (last years were misses for me) but I?m pleasantly surprised on this one! Arlo Parks, L‚onie Gray, Ren‚e Rapp (loved her on Broadway), Labrinth, T-Pain, Hozier, Jungle (great music fest vibes), Still Woozy, Raye?this is gonna be fun! Unsure if it?s 395$ fun though ??\"]\n",
         "\n",
         "processed_training_data = preprocess(training_data, regex_pattern = r\"(?u)\\b[a-z][a-z]+\\b\", stop_words = stop_words, is_lemmatize = True)\n",
         "\n",
+        "# df = pd.DataFrame(processed_training_data)\n",
         "\n",
+        "# df.to_csv(\"Processed Test.csv\")\n",
         "\n",
         "(training_data_split, testing_data_split, training_labels_split, testing_labels_split) = train_test_split(processed_training_data, training_labels,  test_size = int(len(training_data)*test_split), random_state=seed)\n",
-        "print(training_data_split)\n",
-        "model = SVM()\n",
+        "# print(training_data_split)\n",
+        "# model = SVM()\n",
         "model.train(training_data_split, training_labels_split)\n",
         "pred = model.predict(testing_data_split)\n",
-        "print(pred)\n",
+        "# # print(pred)\n",
         "print(\"Accuracy:\",accuracy_score(testing_labels_split, pred))\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -483,7 +490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -495,36 +502,6 @@
       "metadata": {},
       "source": [
         "# Random Forest"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "class SVM(): \n",
-        "    def __init__(self, max_features = 3000, token_pattern = r\"(?u)\\b[a-z][a-z]+\\b\", min_df = 1, max_df = 1.0, ngram_range = (1,1)):\n",
-        "        spacy_stopwords_list = list(fr_stop) + list(en_stop)\n",
-        "        nltk_stopwords_list = stopwords.words('english') + stopwords.words('french')\n",
-        "        other_stop_words = ['http', 'https', 'www']\n",
-        "        stop_words = list(set().union(spacy_stopwords_list, nltk_stopwords_list, other_stop_words))\n",
-        "        self.pattern = token_pattern\n",
-        "        self.ngram_range = ngram_range\n",
-        "        self.vectorizer = TfidfVectorizer(binary = True, max_features = max_features, token_pattern = self.pattern, min_df = min_df, max_df = max_df, ngram_range = ngram_range)\n",
-        "        self.svm_class = svm.SVC(kernel='linear', random_state=seed)\n",
-        "\n",
-        "    def train(self, x_data_train, x_data_labels):\n",
-        "        assert len(x_data_train)  == len(x_data_labels)\n",
-        "        # assert type(x_data_train) == type(x_data_labels) == np.ndarray\n",
-        "        # fit the \n",
-        "        vectors_train_idf = self.vectorizer.fit_transform(x_data_train)\n",
-        "        self.svm_class.fit(vectors_train_idf, x_data_labels)\n",
-        "    \n",
-        "    def predict(self, x_data_test): \n",
-        "        tfidf_test = self.vectorizer.transform(x_data_test)\n",
-        "        x_data_pred = self.svm_class.predict(tfidf_test)\n",
-        "        return x_data_pred"
       ]
     },
     {
