--- a/archive/NB.ipynb
+++ b/archive/NB.ipynb
@@ -72,7 +72,7 @@
         "from sklearn.feature_extraction.text import CountVectorizer\n",
         "from sklearn.feature_extraction import text\n",
         "from sklearn.model_selection import train_test_split, KFold\n",
-        "from sklearn.metrics import accuracy_score, confusion_matrix, ConfusionMatrixDisplay, precision_score, recall_score, f1_score\n",
+        "from sklearn.metrics import accuracy_score, confusion_matrix, ConfusionMatrixDisplay\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
@@ -90,18 +90,33 @@
         "from nltk.stem import WordNetLemmatizer\n",
         "from spacy.lang.fr.stop_words import STOP_WORDS as fr_stop\n",
         "from spacy.lang.en.stop_words import STOP_WORDS as en_stop\n",
-        "\n",
+        "!pip install git+https://github.com/ClaudeCoulombe/FrenchLefffLemmatizer.git\n",
         "from french_lefff_lemmatizer.french_lefff_lemmatizer import FrenchLefffLemmatizer # package for french lemmatization\n",
         "from nltk.tokenize.treebank import TreebankWordDetokenizer\n",
         "import random\n",
         "import re\n",
-        "\n",
+        "!pip install langdetect\n",
         "from nltk.corpus import wordnet\n",
         "from langdetect import detect\n",
-        "\n",
+        "!pip install tqdm\n",
         "from tqdm import tqdm\n",
+        "from itertools import product\n",
         "# from english_dictionary.scripts.read_pickle import get_dict\n",
         "from english_words import get_english_words_set\n",
+        "\n",
+        "from sklearn.ensemble import VotingClassifier\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.datasets import make_classification\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.naive_bayes import MultinomialNB\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.model_selection import cross_val_score, KFold, GridSearchCV\n",
+        "\n",
         "\n",
         "seed = 10\n",
         "random.seed(seed)\n",
@@ -134,9 +149,7 @@
         "training_data   = df['body'].apply(lambda x: x.lower().replace('_', ' ').replace('\\x82', 'e').replace('\\x85', 'a').replace('\\x87', 'c').replace('\\x8a', 'e').replace('\\x88', 'e').replace('\\x93', 'a').replace('\\x80', 'l').replace('\\x96', 'o')).to_numpy()\n",
         "training_labels = df['subreddit'].to_numpy()\n",
         "\n",
-        "# lemmatized_training_data_swapped = pd.read_csv(path + 'lemmatized_swapped.csv')['body'].to_numpy()\n",
-        "# training_data = df['body'].apply(lambda x: x.lower().replace('_', ' ')).to_numpy()\n",
-        "# training_labels = df['subreddit'].to_numpy()"
+        "lemmatized_training_data_swapped = pd.read_csv(path + 'lemmatized_swapped.csv')['body'].to_numpy()"
       ]
     },
     {
@@ -270,7 +283,21 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Support Vector Machine"
+        "# Experimentation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Sam Exploration"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Support Vector Machine"
       ]
     },
     {
@@ -865,15 +892,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "num_weights = "
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 70,
       "metadata": {},
       "outputs": [
@@ -1169,7 +1187,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Random Forest"
+        "## Aman Exploration"
       ]
     },
     {
@@ -1178,7 +1196,7 @@
         "id": "fE3SbVUlPho5"
       },
       "source": [
-        "# NB and K-Fold"
+        "### NB and K-Fold"
       ]
     },
     {
@@ -1194,37 +1212,6 @@
         "# use the get_feature_names to create a dictionary to map to all counts\n",
         "# this dictionary would be contained in another dict that has the labels as keys\n",
         "# to find P(xj,k), find the indices where test_labels = (k), then find"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {
-        "id": "1SOK9cAT17fm"
-      },
-      "outputs": [],
-      "source": [
-        "def get_wordnet_pos(word):\n",
-        "    \"\"\"Map POS tag to first character lemmatize() accepts\"\"\"\n",
-        "    tag = nltk.pos_tag([word])[0][1][0].upper()\n",
-        "    tag_dict = {\"J\": wordnet.ADJ,\n",
-        "                \"N\": wordnet.NOUN,\n",
-        "                \"V\": wordnet.VERB,\n",
-        "                \"R\": wordnet.ADV}\n",
-        "    return tag_dict.get(tag, wordnet.NOUN)\n",
-        "\n",
-        "class LemmaTokenizer:\n",
-        "     def __init__(self, pattern):\n",
-        "       self.pattern = pattern\n",
-        "     def __call__(self, doc):\n",
-        "       doc = doc.lower().replace('_', ' ')\n",
-        "       doc_words = list(set(re.findall(self.pattern, doc)))\n",
-        "       lang = detect(' '.join(doc_words))\n",
-        "       if lang == 'en':\n",
-        "           lemmatizer = WordNetLemmatizer()\n",
-        "       else:\n",
-        "           lemmatizer = FrenchLefffLemmatizer()\n",
-        "       return [lemmatizer.lemmatize(word,pos =get_wordnet_pos(word)) for word in doc_words]"
       ]
     },
     {
@@ -1291,26 +1278,15 @@
         "\n",
         "          theta_xj_k      = (self.word_count_given_label[label][word] + 1) / (self.label_count[label] + len(self.labels))\n",
         "          p_of_x_given_y *= (theta_xj_k**(xj) * (1-theta_xj_k)**(1-xj))\n",
-        "          # print(label, word, p_of_x_given_y, theta_xj_k, (theta_xj_k**(xj) * (1-theta_xj_k)**(1-xj)))\n",
-        "\n",
-        "        unseen_words = [new_word for new_word in corpus_words if new_word not in self.word_list]\n",
-        "        for word in unseen_words:\n",
-        "          # p_of_x_given_y *= 1/(self.label_count[label] + len(self.labels))\n",
-        "          p_of_x_given_y *= 1/(len(self.labels)) # When there are a large number of unseen words, the p_of_x_given_y basically becomes 0\n",
-        "        # print(len(unseen_words), len(corpus_words))\n",
         "\n",
         "        p_of_y_given_x = np.log(p_of_y * p_of_x_given_y)\n",
-        "        # print(p_of_y, p_of_x_given_y)\n",
-        "        # print(label, p_of_y_given_x)\n",
         "\n",
-        "        # print(p_of_y_given_x, best_prob)\n",
         "        if p_of_y_given_x > best_prob:\n",
         "          best_prob = p_of_y_given_x\n",
         "          best_label = label\n",
         "\n",
         "      if p_of_x_given_y == 0:\n",
         "        self.no_pred.append(corpus)\n",
-        "      #   best_label = random.choice(self.labels)\n",
         "\n",
         "      predictions.append(best_label)\n",
         "\n",
@@ -1393,7 +1369,7 @@
         "id": "7xBVjFXWpw7p"
       },
       "source": [
-        "# Simple test cases for NB"
+        "Simple test cases for NB"
       ]
     },
     {
@@ -1495,27 +1471,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "PlHr32RYp0Fn"
-      },
-      "source": [
-        "# K-fold for NB"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "eTGtkcsZM7FP"
-      },
-      "outputs": [],
-      "source": [
-        "# TODO: No predictions given, divide by zero warnings might be the cause (Solved?)\n",
-        "# TODO: Test changing the prob caluclation to be a sum of logs"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1598,7 +1553,7 @@
         "other_stop_words = ['http', 'https', 'www']\n",
         "stop_words = list(set().union(spacy_stopwords_list, nltk_stopwords_list, other_stop_words))\n",
         "\n",
-        "processed_training_data = preprocess(lemmatized_data, regex_pattern = r\"(?u)\\b[a-z][a-z]+\\b\", stop_words = stop_words, is_lemmatize = False)\n",
+        "processed_training_data = preprocess(lemmatized_training_data_swapped, regex_pattern = r\"(?u)\\b[a-z][a-z]+\\b\", stop_words = stop_words, is_lemmatize = False)\n",
         "\n",
         "test_split = 0.1\n",
         "\n",
@@ -1617,27 +1572,176 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Naive Bayes K-fold HP"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zR9JJ-fMkF0O",
-        "outputId": "08a49ee5-8741-423f-baca-66dcc98ad979"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
-        "sorted(model.word_count.items(), key=lambda item: item[1], reverse = True)[:-1]"
+        "# Set Hps\n",
+        "spacy_stopwords_list = list(fr_stop) + list(en_stop)\n",
+        "nltk_stopwords_list = stopwords.words('english') + stopwords.words('french')\n",
+        "other_stop_words = ['http', 'https', 'www']\n",
+        "stop_words = list(set().union(spacy_stopwords_list, nltk_stopwords_list, other_stop_words))\n",
+        "\n",
+        "stop_words_list = [spacy_stopwords_list, nltk_stopwords_list, stop_words]\n",
+        "max_feats_list  = [3000, 4000, 5000]\n",
+        "is_lemmatize    = [True, False]\n",
+        "ng_list         = [(1,1), (1,2), (1,3)]\n",
+        "alphas          = [1, 2, 3]\n",
+        "\n",
+        "hps = list(product(stop_words_list, max_feats_list, is_lemmatize, ng_list, alphas))\n",
+        "\n",
+        "error = []\n",
+        "infos  = []\n",
+        "\n",
+        "count = 1\n",
+        "# Evaluate\n",
+        "for stp_wd, max_feat, is_lem, ngram, alpha in hps:\n",
+        "  print('Iteration: {}'.format(count))\n",
+        "  if is_lem:\n",
+        "    processed_training_data = preprocess(lemmatized_training_data_swapped, stop_words = stp_wd)\n",
+        "  else:\n",
+        "    processed_training_data = preprocess(training_data, stop_words = stp_wd)\n",
+        "\n",
+        "  model = NB(max_features = max_feat, ngram_range = ngram, alpha = alpha)\n",
+        "\n",
+        "  mean_error, info = k_fold_validation(processed_training_data, training_labels, model = model)\n",
+        "  error.append(mean_error)\n",
+        "  infos.append(info)\n",
+        "  count += 1\n",
+        "  # print()\n",
+        "  # print('Mean Error: {}'.format(mean_error))\n",
+        "  # print()\n",
+        "  # print('\\nModel Misses: {}'.format(model.no_pred))"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "eqQEA-SVi8nW"
-      },
+      "metadata": {},
       "source": [
-        "# Experimentation"
+        "### Logistic Regression"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.naive_bayes import MultinomialNB\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.model_selection import cross_val_score, KFold, GridSearchCV\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "\n",
+        "spacy_stopwords_list = list(fr_stop) + list(en_stop)\n",
+        "nltk_stopwords_list = stopwords.words('english') + stopwords.words('french')\n",
+        "other_stop_words = ['http', 'https', 'www']\n",
+        "stop_words = list(set().union(spacy_stopwords_list, nltk_stopwords_list, other_stop_words))\n",
+        "\n",
+        "processed_training_data = preprocess(lemmatized_training_data_swapped, stop_words = stop_words)\n",
+        "# processed_training_data = preprocess(training_data, stop_words = stop_words)\n",
+        "\n",
+        "model = LogisticRegression()\n",
+        "# k_fold = KFold(n_splits=10, shuffle=True, random_state=seed)  # Define number of folds (k) and random state\n",
+        "\n",
+        "pipeline = Pipeline([\n",
+        "    ('vectorizer', None),\n",
+        "    ('model', model)\n",
+        "])\n",
+        "\n",
+        "# Define the parameter grid with conditional hyperparameters for both vectorizers\n",
+        "param_grid = [\n",
+        "    {\n",
+        "        'vectorizer': [TfidfVectorizer(token_pattern = r\"(?u)\\b[a-z][a-z]+\\b\")],\n",
+        "        'vectorizer__max_features': [None, 3000, 4000],\n",
+        "        'vectorizer__max_df': [0.5, 1.0],  # Example TfidfVectorizer hyperparameter\n",
+        "        'vectorizer__min_df': [1, 2],          # Example TfidfVectorizer hyperparameter\n",
+        "        'vectorizer__ngram_range': [(1,1), (1,2), (1,3)],\n",
+        "    },\n",
+        "    {\n",
+        "        'vectorizer': [CountVectorizer(token_pattern = r\"(?u)\\b[a-z][a-z]+\\b\")],\n",
+        "        'vectorizer__max_features': [None, 3000, 4000],\n",
+        "        'vectorizer__ngram_range': [(1,1), (1,2), (1,3)],\n",
+        "        'vectorizer__binary': [True, False],\n",
+        "        'vectorizer__max_df': [0.5, 1.0],\n",
+        "        'vectorizer__min_df': [1, 2],\n",
+        "    }\n",
+        "]\n",
+        "\n",
+        "grid_search = GridSearchCV(estimator=pipeline, param_grid=param_grid, cv=10, scoring='accuracy')\n",
+        "grid_search.fit(processed_training_data, training_labels)\n",
+        "\n",
+        "# Get the best parameters and best score\n",
+        "print(\"Best Parameters:\", grid_search.best_params_)\n",
+        "print(\"Best Score:\", grid_search.best_score_)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Best Parameters: {'vectorizer': TfidfVectorizer(max_df=0.5, min_df=2, token_pattern='(?u)\\\\b[a-z][a-z]+\\\\b'), 'vectorizer__max_df': 0.5, 'vectorizer__max_features': None, 'vectorizer__min_df': 2, 'vectorizer__ngram_range': (1, 1)}\n",
+        "Best Score: 0.6783077316948285\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.naive_bayes import MultinomialNB\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.model_selection import cross_val_score, KFold, GridSearchCV\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "\n",
+        "spacy_stopwords_list = list(fr_stop) + list(en_stop)\n",
+        "nltk_stopwords_list = stopwords.words('english') + stopwords.words('french')\n",
+        "other_stop_words = ['http', 'https', 'www']\n",
+        "stop_words = list(set().union(spacy_stopwords_list, nltk_stopwords_list, other_stop_words))\n",
+        "\n",
+        "processed_training_data_1 = preprocess(lemmatized_training_data_swapped, stop_words = stop_words)\n",
+        "processed_training_data_2 = preprocess(training_data_swapped, stop_words = stop_words)\n",
+        "\n",
+        "pipeline = Pipeline([\n",
+        "    ('vectorizer', TfidfVectorizer(max_df=0.5, min_df=2, token_pattern='(?u)\\\\b[a-z][a-z]+\\\\b')),\n",
+        "    ('model', LogisticRegression(random_state = seed, max_iter = 1000))\n",
+        "])\n",
+        "\n",
+        "param_grid = [\n",
+        "\n",
+        "    {\n",
+        "        'model__C': [1e-3, 1e-1, 1, 10, 1e2],\n",
+        "        'model__solver' : ['lbfgs', 'liblinear', 'newton-cg', 'newton-cholesky', 'sag', 'saga']\n",
+        "    }\n",
+        "]\n",
+        "\n",
+        "for x_train in (processed_training_data_1, processed_training_data_2):\n",
+        "  grid_search = GridSearchCV(estimator=pipeline, param_grid=param_grid, cv=10, scoring='accuracy')\n",
+        "  grid_search.fit(x_train, training_labels)\n",
+        "\n",
+        "  # Get the best parameters and best score\n",
+        "  print(\"Best Parameters:\", grid_search.best_params_)\n",
+        "  print(\"Best Score:\", grid_search.best_score_)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Best Parameters: {'model__C': 10, 'model__solver': 'liblinear'}\n",
+        "Best Score: 0.6947491039426523\n",
+        "Best Parameters: {'model__C': 10, 'model__solver': 'liblinear'}\n",
+        "Best Score: 0.6997721454173067"
       ]
     },
     {
@@ -4063,37 +4167,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "blCjGI-AjD3L"
-      },
-      "source": [
-        "## Stop Words"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "VVwJiulmjHAM"
-      },
-      "source": [
-        "## Lemmatization"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "I4-78HfOjnED"
-      },
-      "source": [
-        "## Max Features"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Giz98mOOps5d"
       },
       "source": [
-        "# Actual Test Case"
+        "# Actual Test Case Example"
       ]
     },
     {
@@ -4105,11 +4182,11 @@
       "outputs": [],
       "source": [
         "model = NB()\n",
-        "model.train(processed_comment_data, labels)\n",
+        "model.train(training_data, labels)\n",
         "\n",
         "test_df = pd.read_csv(path + 'test.csv', encoding = \"ISO-8859-1\")\n",
         "test_data = test_df['body'].to_numpy()\n",
-        "processed_test_data = lemmatize_and_remove_stop_words(test_data)\n",
+        "processed_test_data = preprocess(test_data)\n",
         "\n",
         "predictions = model.predict(processed_test_data)"
       ]
@@ -4144,7 +4221,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.5"
+      "version": "3.9.0"
     }
   },
   "nbformat": 4,
